Fix a couple of versions in the pom.xml files
The pomize script was not clever enough to figure them out...

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	</parent>
 
 	<artifactId>Directionality_</artifactId>
+	<version>2.0</version>
 
 	<name>plugins/Directionality_.jar</name>
 	<description></description>
