--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<artifactId>Directionality_</artifactId>
-	<version>2.0</version>
+	<version>2.0.1-SNAPSHOT</version>
 
 	<name>plugins/Directionality_.jar</name>
 	<description></description>
