--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 		</dependency>
 	</dependencies>
 
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>http://jenkins.imagej.net/job/Directionality/</url>
+	</ciManagement>
+
 	<scm>
 		<connection>scm:git:git://github.com/fiji/Directionality</connection>
 		<developerConnection>scm:git:git@github.com:fiji/Directionality</developerConnection>
