Update parent to org.scijava:pom-scijava:14.0.0
See:
http://forum.imagej.net/t/split-boms-from-parent-configuration/2563

--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,31 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>sc.fiji</groupId>
-		<artifactId>pom-fiji</artifactId>
-		<version>6.1.3</version>
+		<groupId>org.scijava</groupId>
+		<artifactId>pom-scijava</artifactId>
+		<version>14.0.0</version>
 		<relativePath />
 	</parent>
 
+	<groupId>sc.fiji</groupId>
 	<artifactId>Directionality_</artifactId>
 	<version>2.0.2-SNAPSHOT</version>
 
-	<name>plugins/Directionality_.jar</name>
-	<description />
+	<name>Directionality</name>
+	<description>Directionality plugin for Fiji.</description>
+	<url>https://imagej.net/Directionality</url>
+	<inceptionYear>2010</inceptionYear>
+	<organization>
+		<name>Fiji</name>
+		<url>https://fiji.sc/</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>GNU General Public License v3+</name>
+			<url>https://www.gnu.org/licenses/gpl.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<developers>
 		<developer>
@@ -56,6 +70,13 @@
 		</contributor>
 	</contributors>
 
+	<mailingLists>
+		<mailingList>
+			<name>ImageJ Forum</name>
+			<archive>http://forum.imagej.net/</archive>
+		</mailingList>
+	</mailingLists>
+
 	<scm>
 		<connection>scm:git:git://github.com/fiji/Directionality</connection>
 		<developerConnection>scm:git:git@github.com:fiji/Directionality</developerConnection>
@@ -70,6 +91,12 @@
 		<system>Jenkins</system>
 		<url>http://jenkins.imagej.net/job/Directionality/</url>
 	</ciManagement>
+
+	<properties>
+		<package-name>fiji.analyze.directionality</package-name>
+		<license.licenseName>gpl_v3</license.licenseName>
+		<license.copyrightOwners>Fiji developers.</license.copyrightOwners>
+	</properties>
 
 	<repositories>
 		<!-- NB: for project parent -->
