--- a/pom.xml
+++ b/pom.xml
@@ -88,8 +88,8 @@
 		<url>https://github.com/fiji/Directionality/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Jenkins</system>
-		<url>http://jenkins.imagej.net/job/Directionality/</url>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/fiji/Directionality</url>
 	</ciManagement>
 
 	<properties>
