--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>Directionality_</artifactId>
-	<version>2.0.2-SNAPSHOT</version>
+	<version>2.0.2</version>
 
 	<name>Directionality</name>
 	<description>Directionality plugin for Fiji.</description>
@@ -80,7 +80,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/fiji/Directionality</connection>
 		<developerConnection>scm:git:git@github.com:fiji/Directionality</developerConnection>
-		<tag>HEAD</tag>
+		<tag>Directionality_-2.0.2</tag>
 		<url>https://github.com/fiji/Directionality</url>
 	</scm>
 	<issueManagement>
