--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>Directionality_</artifactId>
-	<version>2.0.3-SNAPSHOT</version>
+	<version>2.2.0</version>
 
 	<name>Directionality</name>
 	<description>Directionality plugin for Fiji.</description>
