--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 	</mailingLists>
 
 	<scm>
-		<connection>scm:git:git://github.com/fiji/Directionality</connection>
+		<connection>scm:git:https://github.com/fiji/Directionality</connection>
 		<developerConnection>scm:git:git@github.com:fiji/Directionality</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/fiji/Directionality</url>
